--- a/ggplot2_student_walkthrough.Rmd
+++ b/ggplot2_student_walkthrough.Rmd
@@ -57,7 +57,13 @@ ggplot(data = mpg) +
 ```
 
 ```{r}
+# #ggplot(data = mpg) +
+#   geom_smooth(mapping = aes(x = displ, y = hwy, linetype = drv)) +
+#   geom_point(mapping = aes(x = displ, y = hwy, color = drv))
 
+ggplot(data = mpg, mapping = aes(x = displ, y = hwy, linetype = drv)) + 
+  geom_point(mapping = aes(color = class)) +
+  geom_smooth(se = FALSE)
 ```
 
 ```{r}
@@ -66,26 +72,38 @@ ggplot(data = mpg) +
 
 ```{r}
 
+ggplot(data = diamonds) +
+  geom_bar(mapping = aes(x = cut))
 ```
 
-Whoa, where'd count come from? **Count is not a variable or attribute of the variable diamonds!** Count comes automatically with a lot of graphs as an attribute. You can verify what I'm saying with `?diamonds` in the console.
+Whoa, where'd count come from? **Count is not a variable or attribute of the variable diamonds!** Count comes automatically with a lot of graphs as an attribute. You can verify what I'm saying with `?diamonds` in the console. It shows up because this is a discrete data set, rather than the continuous data set that we have been using.
 
 Any attribute of a data set that is algorithmically calculated is called a *stat*, which is short for a statistical transformation. Many of the **geom** functions have stats built in, and many stats display geoms. For example, the above code block used a geom, but this one uses a stat, and results in an identical chart:
 
 ```{r}
-
+ggplot(data = diamonds) +
+  stat_count(mapping = aes(x = cut))
 ```
 
 Let's add color here!
 
 ```{r}
-
+ggplot(data = diamonds) +
+  geom_bar(mapping = aes(x = cut, fill = cut))
 ```
 
 What if we add to a different variable than cut?
 
 ```{r}
+pie = ggplot(data = diamonds) +
+  geom_bar(mapping = aes(x = cut, fill = clarity),
+           # position = "dodge"
+           position = 'fill'
+  ) +
+  theme(aspect.ratio = 1) +
+  labs(x = NULL, y = NULL)
 
+pie + coord_polar()
 ```
 
 **For your consideration...** Is the above a good graph?
@@ -97,6 +115,15 @@ alt- becomes <- (option- on mac)
 ## Homework
 
 ```{r}
-# Find a builtin data set for students to explore; use their cheat sheet from stats to label continuous and discrete data; Analyze that data set, create graphs, find a hypothesis
+# Find a builtin data set for students to explore; use their cheat sheet from stats to label continuous and discrete data; Use graphs to tell me things about 3 data sets
+# continous
+View(nycflights13::flights)
+```
+
+```{r}
+
+```
+
+```{r}
 
 ```
